--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -4,7 +4,8 @@ on:
   repository_dispatch:
     types: [build]
   schedule:
-    - cron: "0 22 * * 1"
+    - cron: "0 20 * * 1"
+    # github cron jobs are executed based on UTC https://jackharner.com/blog/github-actions-cron/
 
 jobs:
   build:
