--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -11,6 +11,7 @@ dependencies:
 - pyiron_potentialfit =0.3.7
 - pyiron_workflow =0.11.0
 - pyiron_gui =0.0.12
+- pyironflow =0.0.3
 - matgl =1.1.2
 - mlip =2.0
 - sqsgenerator =0.3
