[dependabot skip] Update environment

--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -27,5 +27,5 @@ dependencies:
 - llama-index =0.11.18
 - jupyter-server-proxy =4.4.0
 - flux-core =0.64.0
-- netcdf4 =1.7.1
+- netcdf4 =1.7.1.post2
 - maxvolpy =0.3.8
