--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -6,23 +6,34 @@ dependencies:
 - atomicrex =1.0.4
 - calphy =1.3.10
 - fitsnap3 =3.1.0.4
+- flux-core =0.64.0
+- git =2.46.0
+- gpaw =24.6.0=*openmpi*
+- jupyter-server-proxy =4.4.0
+- lammps =2023.08.02=*openmpi*
+- llama-index =0.11.16
+- matgl =1.1.2
+- mkl =2023.2.0
+- mlip =2.0
 - nbgitpuller =1.2.1
+- nglview =3.1.2
+- numba =0.60.0
+- openkim-models =2021.01.28
+- psycopg2 =2.9.9
+- pyiron =0.5.2
+- pyiron-data =0.0.30
+- pyiron_atomistics =0.6.13
+- pyiron_base =0.10.2
 - pyiron_contrib =0.1.18
+- pyiron_gpl =0.0.5
+- pyiron_gui =0.0.12
 - pyiron_potentialfit =0.3.7
 - pyiron_workflow =0.11.0
-- pyiron_gui =0.0.12
-- matgl =1.1.2
-- mlip =2.0
-- sqsgenerator =0.3
-- pyiron_gpl =0.0.5
 - python-ace =0.3.0
 - pytorch =2.1.2
 - pyxtal =1.0.4
 - runner =1.3
+- sphinxdft =3.1
+- sqsgenerator =0.3
 - structdbrest =0.0.1
 - tensorflow =2.17.0
-- psycopg2 =2.9.9
-- numba =0.60.0
-- llama-index =0.11.16
-- jupyter-server-proxy =4.4.0
-- flux-core =0.64.0
