--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -4,6 +4,8 @@ channels:
 dependencies:
 - aimsgb =1.1.1
 - atomicrex =1.0.4
+- bader =1.0.5
+- bokeh =3.6.1
 - calphy =1.3.11
 - fitsnap3 =3.1.0.4
 - flux-core =0.64.0
@@ -13,9 +15,11 @@ dependencies:
 - lammps =2023.08.02=*openmpi*
 - llama-index =0.12.1
 - matgl =1.1.2
+- maxvolpy =0.3.8
 - mkl =2023.2.0
 - mlip =2.0
 - nbgitpuller =1.2.1
+- netcdf4 =1.7.1
 - nglview =3.1.2
 - numba =0.60.0
 - openkim-models =2021.01.28
