Update jupyterhub version on cmti
To match the version of the main JupyterHUB

--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -27,6 +27,7 @@ dependencies:
 - numba =0.60.0
 - llama-index =0.12.9
 - jupyter-server-proxy =4.4.0
+- jupyterhub =5.2.1
 - flux-core =0.64.0
 - netcdf4 =1.7.1
 - maxvolpy =0.3.8
